// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`loader > renders active with custom percentage 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="styles__1ehxqey2"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders active with default percentage 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      class="styles__1ehxqey2"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with color neutral and primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-neutral-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with percentage 75 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="75"
      aria-valuetext="75%"
      class="styles__1ehxqey2"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="65.97344572538566"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment danger 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-danger-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment neutral 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-neutral-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment primary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment secondary 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-secondary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with sentiment success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-success-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-300); width: var(--sizing-300);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-250); width: var(--sizing-250);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-200); width: var(--sizing-200);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xlarge 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-400); width: var(--sizing-400);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xsmall 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-150); width: var(--sizing-150);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`loader > renders with size xxlarge 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <svg
      aria-label="Loading test"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="20"
      aria-valuetext="20%"
      role="progressbar"
      style="height: var(--sizing-700); width: var(--sizing-700);"
      viewBox="0 0 100 100"
    >
      <circle
        class="styles__1ehxqey1"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke-width="16"
      />
      <circle
        class="styles__1ehxqey3"
        cx="50"
        cy="50"
        fill="none"
        r="42"
        stroke="var(--color-primary-background-strong)"
        stroke-dasharray="263.89378290154264"
        stroke-dashoffset="211.11502632123413"
        stroke-linecap="round"
        stroke-width="16"
      />
    </svg>
  </div>
</DocumentFragment>
`;
